fix: replaced wrong font and fixed console errors/warnings

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'Gt america standard';
-  src: url('../fonts/GT-Super-Text-Bold.ttf') format('truetype');
+  src: url('../fonts/GT-America-Standard-Regular.woff2') format('truetype');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Gt super display';
-  src: url('../fonts/GT-Super-Display-Bold.ttf') format('truetype');
+  src: url('../fonts/GT-Super-Display-Bold.woff2') format('truetype');
   font-display: swap;
 }
 
